Fix nav alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,6 +12,8 @@ header {
     padding-bottom: 100px;
     h1 {
         text-transform: uppercase;
+        font-size: 60px;
+        font-weight: bolder;
     }
     h3 {
         text-transform: capitalize;
@@ -19,11 +21,23 @@ header {
         margin-top: 0; 
     }
     nav {
+        padding: 50px;
         p {
             font-family: "Playwrite RO", cursive;
             font-size: 20px;
+            font-weight: bold;
             color: gold;
             margin-top: 0
+        }
+        ul {
+            li {
+                margin-right: 20px;
+                a {
+                    color: white;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                }
+            }
         }
     }
     ul {
